[package]
name = "rs_music_server"
version = "0.1.0"
authors = ["STSchiff <chrisheib@gmx.de>"]
edition = "2021"

[profile.release]
lto = "thin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-files = "0.6.1"
json = "0.12.4"
walkdir = "2.3.2"
rand = "0.8.5"
rusqlite = {version = "0.28.0", features = ["bundled"]}
audiotags = "0.2.7182" # tags
mp3-duration = "0.1.10" # song length
stable-eyre = "0.2.2"