[package]
name = "music-srv"
version = "0.1.0"
authors = ["STSchiff <chrisheib@gmx.de>"]
edition = "2021"

[profile.release]
lto = "thin"
debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
json = "0.12"
walkdir = "2"
rand = "0.8"
rusqlite = { version = "0.28", features = ["bundled"] }
audiotags = "0.4"                                       # tags
mp3-duration = "0.1"                                    # song length
stable-eyre = "0.2"
serde = { version = "1", features = ["derive"] }
lazy_static = "1"
minijinja = { version = "2.10.2", features = ["loader"] }
minijinja-autoreload = "2.10.2"
color-eyre = "0.6.4"
itertools = "0.14.0"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
serde_json = "1.0.140"
